--- a/lab8_report.ipynb
+++ b/lab8_report.ipynb
@@ -397,7 +397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 style=\"color:red;\"><left>5.5. Exercise: Image Sharpening</left></h3>"
+    "<h3 style=\"color:red;\"><left>Exercise 3: Image Sharpening</left></h3>"
    ]
   },
   {
@@ -526,7 +526,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 style=\"color:red;\"><left>Exercise 3: Spatial Filtering</left></h3>"
+    "<h3 style=\"color:red;\"><left>Exercise 4: Spatial Filtering</left></h3>"
    ]
   },
   {
@@ -621,7 +621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 style=\"color:red;\"><left>Exercise 4: Adaptive Median Filtering</left></h3>"
+    "<h3 style=\"color:red;\"><left>Exercise 5: Adaptive Median Filtering</left></h3>"
    ]
   },
   {
@@ -755,7 +755,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 style=\"color:red;\"><left>Exercise 5: MSE and PSNR</left></h3>"
+    "<h3 style=\"color:red;\"><left>Exercise 6: MSE and PSNR</left></h3>"
    ]
   },
   {
